--- a/oefening-02/style.css
+++ b/oefening-02/style.css
@@ -5,6 +5,9 @@ aside {
   border-radius: 7px;
   background-color: white;
   box-shadow: 3px 4px 20px 0px gray;
+  position: absolute;
+  bottom: 30px;
+  right: 20px;
 
   /* positioneer dit element in de rechterbenedenhoek */
 }
